--- a/_config.yml
+++ b/_config.yml
@@ -5,27 +5,24 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
-title: dbyll
+disqus: ZnPdCo
+google_analytics: ZnPdCo
+title: ZnPdCo
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: ZnPdCo
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
+  name: ZnPdCo
+  email: poiuytreertyuiop@outlook.com
+  github: ZnPdCo
   bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  email_md5: 2544A0F87F46741BA8E070E674F0B2F1
 
 rss_path: feed.xml
 categories_path: categories.html
