--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   github: ZnPdCo
   bio: Your stylish, minimalist theme!
   email_md5: 2544A0F87F46741BA8E070E674F0B2F1
-  icon: https://pic.cnblogs.com/avatar/3203316/20240301123857.png
+  icon: https://cdn.luogu.com.cn/upload/image_hosting/zzlxiek3.png
 
 rss_path: feed.xml
 categories_path: categories.html
