font-awesome 升级

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ author:
   name: ZnPdCo
   email: poiuytreertyuiop@outlook.com
   github: ZnPdCo
+  bilibili: 676061636
+  qq: 1905265085
+  cnblogs: znpdco
   bio: 我是菜鸡自动姬
   icon: https://cdn.luogu.com.cn/upload/image_hosting/zzlxiek3.png
 
